--- a/app/globals.css
+++ b/app/globals.css
@@ -123,3 +123,12 @@
 
 .sonar-pin .ring.r2 { animation-delay: 0.6s; }
 .sonar-pin .ring.r3 { animation-delay: 1.2s; }
+
+/* Utilities */
+.line-clamp-2 {
+  display: -webkit-box;
+  line-clamp: 2;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
